log
Sun 08 Oct 2023 11:08:46 PM UTC: 
 tests:  0|5
total_score: 0/70
066d536
Sun 08 Oct 2023 11:13:43 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:12: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   59 |       list=append(list, adj_node);
      |            ^~~~~~
sudoku.c:59:11: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   59 |       list=append(list, adj_node);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
dbc2f8c
Sun 08 Oct 2023 11:22:17 PM UTC: 
 sudoku.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:72:14: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   72 |       list = append(list, adj_node);
      |              ^~~~~~
sudoku.c:72:12: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   72 |       list = append(list, adj_node);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
ebc68db
Sun 08 Oct 2023 11:24:33 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:14: error: implicit declaration of function ‘append’ [-Werror=implicit-function-declaration]
   75 |       list = append(list, adj_node);
      |              ^~~~~~
sudoku.c:75:12: error: assignment to ‘List *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   75 |       list = append(list, adj_node);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
f3c946e
Sun 08 Oct 2023 11:38:26 PM UTC: 
 sudoku.c | 32 +++++++++++++++++---------------
 1 file changed, 17 insertions(+), 15 deletions(-)
 tests:  0|5
total_score: 0/70
fc78ff5
